--- a/index.html
+++ b/index.html
@@ -49,39 +49,23 @@
           <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i
-                    class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
               <li><a href="#">Dropdown 2</a></li>
               <li><a href="#">Dropdown 3</a></li>
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li>
-          <li><a href="index.html#pricing">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="#"><span> Resources</span><i class="bi bi-chevron-down toggle-dropdown"></i></a>
+
+
             <ul>
               <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i
-                    class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
               <li><a href="#">Dropdown 2</a></li>
               <li><a href="#">Dropdown 3</a></li>
               <li><a href="#">Dropdown 4</a></li>
             </ul>
+
+          </li>
+          <li><a href="index.html#pricing">Price</a>
           </li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -92,7 +76,7 @@
         <h1 class="sitename"></h1>
       </a>
 
-
+      <a href="#">Login </a>
       <a class="btn-getstarted" href="index.html#about">Get Started</a>
 
     </div>
@@ -101,10 +85,8 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section">
-      <div class="hero-bg">
-        <img src="assets/img/hero-bg-light.webp" alt="">
-      </div>
+    <!-- <section id="hero" class="hero section"> -->
+    <!--      
       <div class="container text-center">
         <div class="d-flex flex-column justify-content-center align-items-center">
           <h1 data-aos="fade-up" class="">Welcome to <span>QuickStart</span></h1>
@@ -119,14 +101,15 @@
           <img src="assets/img/hero-services-img.webp" class="img-fluid hero-img" alt="" data-aos="zoom-out"
             data-aos-delay="300">
         </div>
-      </div>
+      </div> -->
 
-    </section><!-- /Hero Section -->
+    <!-- </section> -->
+    <!-- /Hero Section -->
 
     <!-- Featured Services Section -->
-    <section id="featured-services" class="featured-services section">
+    <!-- <section id="featured-services" class="featured-services section"> -->
 
-      <div class="container">
+    <!-- <div class="container">
 
         <div class="row gy-4">
 
@@ -138,20 +121,21 @@
                 <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
               </div>
             </div>
-          </div>
-          <!-- End Service Item -->
+          </div> -->
+    <!-- End Service Item -->
 
-          <div class="col-xl-4 col-lg-6" data-aos="fade-up" data-aos-delay="200">
+    <!-- <div class="col-xl-4 col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item d-flex">
               <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
               <div>
                 <h4 class="title"><a href="#" class="stretched-link">Dolor Sitema</a></h4>
                 <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip exa</p>
               </div>
-            </div>
-          </div><!-- End Service Item -->
+            </div> -->
+    <!-- </div> -->
+    <!-- End Service Item -->
 
-          <div class="col-xl-4 col-lg-6" data-aos="fade-up" data-aos-delay="300">
+    <!-- <div class="col-xl-4 col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item d-flex">
               <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
               <div>
@@ -159,13 +143,15 @@
                 <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div> -->
+    <!-- End Service Item -->
 
-        </div>
+    <!-- </div> -->
 
-      </div>
+    <!-- </div> -->
 
-    </section><!-- /Featured Services Section -->
+    <!-- </section> -->
+    <!-- /Featured Services Section -->
 
     <!-- About Section -->
     <section id="about" class="about section">
@@ -175,39 +161,35 @@
         <div class="row gy-4">
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
-            <p class="who-we-are">Who We Are</p>
-            <h3>Unleashing Potential with Creative Strategy</h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
+            <!-- <p class="who-we-are">Who We Are</p> -->
+            <h3>Lorem Ipsum is simply dummy <br />text of the printing</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting<br /> industry. Lorem Ipsum has been the
+              industry's standard dummy <br />text ever since the 1500s, when an unknown printer took a galley<br /> of
+              type and
+              scrambled it to make a type specimen book
             </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo
-                  consequat.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate
-                  velit.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                  aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla
-                  pariatur.</span></li>
-            </ul>
-            <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
+            <p>
+              get your free month of bookkeeping , valued at $299.
+            </p>
+            <a href="#" class="read-more"><span>GET STARTED</span></a>
+            <a href="#" class="read-more"><span>BOOK A DEMO </span></a>
           </div>
 
           <div class="col-lg-6 about-images" data-aos="fade-up" data-aos-delay="200">
             <div class="row gy-4">
               <div class="col-lg-6">
-                <img src="assets/img/about-company-1.jpg" class="img-fluid" alt="">
+                <img src="./images/landing1.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-6">
-                <div class="row gy-4">
+                <!-- <div class="row gy-4">
                   <div class="col-lg-12">
                     <img src="assets/img/about-company-2.jpg" class="img-fluid" alt="">
                   </div>
                   <div class="col-lg-12">
                     <img src="assets/img/about-company-3.jpg" class="img-fluid" alt="">
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -222,6 +204,34 @@
     <section id="clients" class="clients section">
 
       <div class="container" data-aos="fade-up">
+        <p>Trusted by Visionaries, Embraced by Leading Companies Worldwide</p>
+        <div class="row gy-4">
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+          </div><!-- End Client Item -->
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+          </div><!-- End Client Item -->
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
+          </div><!-- End Client Item -->
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
+          </div><!-- End Client Item -->
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
+          </div><!-- End Client Item -->
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
+          </div><!-- End Client Item -->
+
+        </div>
 
         <div class="row gy-4">
 
@@ -260,8 +270,11 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2 class="">Features</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>UNIFIED PLATFORM</p>
+        <h2>Your All In one Accounting <br />Solution with My T</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting has been<br /> the industrys standard dummy
+          text
+          ever since</p>
       </div><!-- End Section Title -->
 
       <div class="container">
