--- a/index.html
+++ b/index.html
@@ -285,9 +285,19 @@
         <img src="assets/img/features-1.jpg" alt="" />
       </div>
 
-      
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
       <div class="container">
         <div class="row justify-content-between">
+          <h2> Your All In one Accounting<br /> Solution with My T</h2>
+          p>Lorem Ipsum is simply dummy text of the printing and typesetting has been<br /> the industrys standard dummy
+          text
+          ever since</p>
 
           <div class="col-lg-5 d-flex align-items-center">
 
@@ -331,6 +341,18 @@
                 </a>
               </li>
             </ul>
+            <div class="col-lg-6">
+
+              <div class="tab-content" data-aos="fade-up" data-aos-delay="200">
+
+                <div class="tab-pane fade active show" id="features-tab-1">
+                  <img src="assets/img/tabs-1.jpg" alt="" class="img-fluid">
+                </div><!-- End Tab Content Item -->
+
+
+              </div>
+
+            </div>
 
 
             <ul class="nav nav-tabs" data-aos="fade-up" data-aos-delay="100">
@@ -377,24 +399,6 @@
 
           </div>
 
-          <div class="col-lg-6">
-
-            <div class="tab-content" data-aos="fade-up" data-aos-delay="200">
-
-              <div class="tab-pane fade active show" id="features-tab-1">
-                <img src="assets/img/tabs-1.jpg" alt="" class="img-fluid">
-              </div><!-- End Tab Content Item -->
-
-              <div class="tab-pane fade" id="features-tab-2">
-                <img src="assets/img/tabs-2.jpg" alt="" class="img-fluid">
-              </div><!-- End Tab Content Item -->
-
-              <div class="tab-pane fade" id="features-tab-3">
-                <img src="assets/img/tabs-3.jpg" alt="" class="img-fluid">
-              </div><!-- End Tab Content Item -->
-            </div>
-
-          </div>
 
         </div>
 
@@ -425,10 +429,10 @@
             </div>
           </div> -->
 
-        <!-- </div> -->
-        <!-- Features Item -->
+          <!-- </div> -->
+          <!-- Features Item -->
 
-        <div class="row gy-4 justify-content-between features-item">
+          <!-- <div class="row gy-4 justify-content-between features-item">
 
           <div class="col-lg-5 d-flex align-items-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
 
@@ -452,22 +456,24 @@
             <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
           </div>
 
-        </div><!-- Features Item -->
+        </div> -->
+          <!-- Features Item -->
 
-      </div>
+        </div>
 
-    </section><!-- /Features Details Section -->
+    </section>
+    <!-- /Features Details Section -->
 
     <!-- Services Section -->
     <!-- <section id="services" class="services section"> -->
 
-      <!-- Section Title -->
-      <!-- <div class="container section-title" data-aos="fade-up">
+    <!-- Section Title -->
+    <!-- <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div> -->
-      <!-- End Section Title -->
-<!-- 
+    <!-- End Section Title -->
+    <!-- 
       <div class="container">
 
         <div class="row g-5">
@@ -484,8 +490,8 @@
               </div>
             </div>
           </div> -->
-          <!-- End Service Item -->
-
+    <!-- End Service Item -->
+    <!-- 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item item-orange position-relative">
               <i class="bi bi-broadcast icon"></i>
@@ -497,9 +503,10 @@
                     class="bi bi-arrow-right"></i></a>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div> -->
+    <!-- End Service Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
+    <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item item-teal position-relative">
               <i class="bi bi-easel icon"></i>
               <div>
@@ -509,10 +516,11 @@
                 <a href="service-details.html" class="read-more stretched-link">Learn More <i
                     class="bi bi-arrow-right"></i></a>
               </div>
-            </div>
-          </div><!-- End Service Item -->
+            </div> -->
+    <!-- </div> -->
+    <!-- End Service Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+    <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item item-red position-relative">
               <i class="bi bi-bounding-box-circles icon"></i>
               <div>
@@ -523,9 +531,10 @@
                     class="bi bi-arrow-right"></i></a>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div> -->
+    <!-- End Service Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
+    <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item item-indigo position-relative">
               <i class="bi bi-calendar4-week icon"></i>
               <div>
@@ -536,9 +545,10 @@
                     class="bi bi-arrow-right"></i></a>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div> -->
+    <!-- End Service Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+    <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item item-pink position-relative">
               <i class="bi bi-chat-square-text icon"></i>
               <div>
@@ -549,11 +559,12 @@
                     class="bi bi-arrow-right"></i></a>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div> -->
+    <!-- End Service Item -->
 
-        </div>
+    </div>
 
-      </div>
+    </div>
 
     </section>
     <!-- /Services Section -->
@@ -564,8 +575,10 @@
       <div class="container">
 
         <div class="row justify-content-around gy-4">
-
-          <div class="col-lg-6 d-flex flex-column justify-content-center order-2 order-lg-1" data-aos="fade-up"
+          <h1>Bookkeeping loved by companies around the globe</h1>
+          <P>Lorem Ipsum is simply dummy text of the printing and typesetting has been <br />the industrys standard
+            dummy text ever since</P>
+          <!-- <div class="col-lg-6 d-flex flex-column justify-content-center order-2 order-lg-1" data-aos="fade-up"
             data-aos-delay="100">
             <h3>Enim quis est voluptatibus aliquid consequatur</h3>
             <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus
@@ -580,38 +593,41 @@
                   <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias </p>
                 </div>
               </div><!-- End Icon Box -->
-
+          <!-- 
               <div class="col-lg-6 icon-box d-flex">
                 <i class="bi bi-patch-check flex-shrink-0"></i>
                 <div>
                   <h4>Nemo Enim</h4>
                   <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiise</p>
                 </div>
-              </div><!-- End Icon Box -->
+              </div> -->
+          <!-- End Icon Box -->
 
-              <div class="col-lg-6 icon-box d-flex">
+          <!-- <div class="col-lg-6 icon-box d-flex">
                 <i class="bi bi-brightness-high flex-shrink-0"></i>
                 <div>
                   <h4>Dine Pad</h4>
                   <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit</p>
                 </div>
-              </div><!-- End Icon Box -->
+              </div> -->
+          <!-- End Icon Box -->
 
-              <div class="col-lg-6 icon-box d-flex">
+          <!-- <div class="col-lg-6 icon-box d-flex">
                 <i class="bi bi-brightness-high flex-shrink-0"></i>
                 <div>
                   <h4>Tride clov</h4>
                   <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit</p>
                 </div>
-              </div><!-- End Icon Box -->
+              </div> -->
+          <!-- End Icon Box -->
 
-            </div>
+          <!-- </div>
 
-          </div>
+          </div>  -->
 
-          <div class="features-image col-lg-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
+          <!-- <div class="features-image col-lg-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/features-3.jpg" alt="">
-          </div>
+          </div> -->
 
         </div>
 
