--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </ul>
 
           </li>
-          <li><a href="index.html#pricing">Price</a>
+          <li><a href="index.html#pricing">Pricing</a>
           </li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -82,7 +82,7 @@
         <h1 class="sitename"></h1>
       </a>
 
-      <a href="#" class="loginbutton">Login </a>
+      <a href="#" class="loginbutton">Log In </a>
       <a class="btn-getstarted " href="index.html#about">Get Started</a>
 
     </div>
