--- a/index.html
+++ b/index.html
@@ -1123,14 +1123,10 @@
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
+    <div class="container copyright text-left mt-4">
       <p>© <span>2024</span> <strong class="px-1 sitename">Xtrak. </strong><span>All Rights Reserved</span></p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">Xtrak</a>
+        Designed by <a href="#">Xtrak</a>
       </div>
     </div>
 
