--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <img src="assets/img/MyTlogo.svg" alt="">
+            <img src="assets/img/download.svg" alt="">
           </a>
           <div class="footer-contact pt-3">
             <p>Our technical intelligence can put you on the</p>
