--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
     <!-- About Section -->
     <section id="about" class="about section">
 
-      <div class="containerr">
+      <div class="containerr  ">
 
-        <div class="row gy-4">
+        <div class="row gy-4 hero-section">
 
-          <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 content container-xl " data-aos="fade-up" data-aos-delay="100">
             <!-- <p class="who-we-are">Who We Are</p> -->
             <h3 style="color: #ffffff;">Lorem Ipsum is simply dummy <br />text of the printing</h3>
             <p>
