--- a/index.html
+++ b/index.html
@@ -710,10 +710,10 @@
               <p class="description-two">Essential features to boost efficiency and<br /> streamline operations</p>
               <h4>£ 5.00 Euro</h4>
               <ul>
-                <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-check"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
-                <li><i class="bi bi-check"></i> <span>Pharetra massa massa ultricies</span></li>
+                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
 
               </ul>
               <a href="#" class="cta-btn-two">GET STARTED</a>
@@ -726,10 +726,11 @@
               <p class="description">Essential features to boost efficiency and<br /> streamline operations</p>
               <h4>£ 5.00 Euro</h4>
               <ul>
-                <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-check"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
-                <li><i class="bi bi-check"></i> <span>Pharetra massa massa ultricies</span></li>
+                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+
               </ul>
               <a href="#" class="cta-btn">GET STARTED</a>
             </div>
@@ -1032,7 +1033,7 @@
   <footer id="footer" class="footer position-relative">
 
     <div class="container footer-top">
-      <div class="row gy-4">
+      <div class="row gy-4" style="margin-bottom: 130px;">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
             <img src="assets/img/download.svg" alt="">
@@ -1090,7 +1091,7 @@
     <div class="container copyright text-left mt-4">
       <p>© <span>2024</span> <strong class="px-1 sitename">Xtrak. </strong><span>All Rights Reserved</span></p>
       <div class="credits">
-        Designed by <a href="#">Xtrak</a>
+        Designed by <a class="text-white" href="#">Xtrak</a>
       </div>
     </div>
 
