--- a/index.html
+++ b/index.html
@@ -289,11 +289,12 @@
       </div><!-- End Section Title -->
 
       <div class="container">
-
-        <img src="assets/img/features-1.jpg" alt="" />
-        <img src="assets/img/features-1.jpg" alt="" />
-        <img src="assets/img/features-1.jpg" alt="" />
-        <img src="assets/img/features-1.jpg" alt="" />
+        <div class="imaging">
+          <img src="assets/img/features-1.jpg" alt="" />
+          <img src="assets/img/features-1.jpg" alt="" />
+          <img src="assets/img/features-1.jpg" alt="" />
+          <img src="assets/img/features-1.jpg" alt="" />
+        </div>
       </div>
 
       <br />
