--- a/index.html
+++ b/index.html
@@ -183,8 +183,10 @@
             <p>
               get your free month of bookkeeping , valued at $299.
             </p>
-            <a href="#" class="read-more"><span>GET STARTED</span></a>
-            <a href="#" class="read-more"><span>BOOK A DEMO </span></a>
+            <div class="btns">
+            <a href="#" class="getstarted"><button>GET STARTED</button></a>
+            <a href="#" class=" bookdemo"><button>BOOK A DEMO </button> </a>
+          </div>
           </div>
 
           <div class="col-lg-6 about-images" data-aos="fade-up" data-aos-delay="200">
