logos-upper-line-set

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <!-- Clients Section -->
     <section id="clients" class="clients section">
 
-      <div class="container" data-aos="fade-up">
+      <div class="container  herotwo-line" data-aos="fade-up">
         <p>Trusted by Visionaries, Embraced by Leading Companies Worldwide</p>
         <div class="row gy-4">
 
