--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
               get your free month of bookkeeping , valued at $299.
             </p>
             <div class="btns">
-            <a href="#" class="getstarted"><button>GET STARTED</button></a>
-            <a href="#" class=" bookdemo"><button>BOOK A DEMO </button> </a>
-          </div>
+              <a href="#" class="getstarted"><button>GET STARTED</button></a>
+              <a href="#" class=" bookdemo"><button>BOOK A DEMO </button> </a>
+            </div>
           </div>
 
           <div class="col-lg-6 about-images" data-aos="fade-up" data-aos-delay="200">
@@ -306,6 +306,79 @@
       <br />
       <br />
       <br />
+      <!-- More Features Section -->
+      <section id="more-features" class="more-features section">
+
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="card custom-card">
+                <div class="card-body">
+                  <h5 class="card-title">One and only for you</h5>
+                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting has been
+                    the industrys standard dummy text ever since</p>
+                  <img src="./assets/img/feature/64ddbc5989aeb93f160948ac_bti-img 1.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col">
+              <div class="card custom-card-two">
+                <div class="card-body">
+                  <h5 class="card-title">Easy integration</h5>
+                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting </p>
+                  <img src="./assets/img/feature/Clip path group.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col">
+              <div class="card custom-card-three">
+                <div class="card-body">
+                  <img src="./assets/img/feature/3rd.svg" alt="" />
+                  <h5 class="card-title">One and only for you</h5>
+                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting has been
+                    the industrys standard dummy text ever since</p>
+                  <img src="./assets/img/feature/4th.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col">
+              <div class="card custom-card-foure">
+                <div class="card-body">
+                  <h5 class="card-title">Reliability</h5>
+                  <img src="./assets/img/feature/64ddbc5989aeb93f160948ac_bti-img 1.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col">
+              <div class="card custom-card-five">
+                <div class="card-body">
+                  <h5 class="card-title">24/7 support</h5>
+                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting </p>
+                  <img src="./assets/img/feature/Clip path group.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+
+      </section><!-- /More Features Section -->
+
+
+
       <div class="container">
         <div class="row justify-content-between">
           <h2> Your All In one Accounting<br /> Solution with My T</h2>
@@ -582,98 +655,89 @@
 
     </section>
     <!-- /Services Section -->
-
-    <!-- More Features Section -->
-    <section id="more-features" class="more-features section">
-
-      <div class="container">
-
-        <div class="row justify-content-around gy-4">
-          <h1>Bookkeeping loved by companies around the globe</h1>
-          <P>Lorem Ipsum is simply dummy text of the printing and typesetting has been <br />the industrys standard
-            dummy text ever since</P>
-          <div class="row">
-            <div class="col-sm-3">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                </div>
-              </div>
+    <div class="row justify-content-around gy-4">
+      <h1>Bookkeeping loved by companies around the globe</h1>
+      <P>Lorem Ipsum is simply dummy text of the printing and typesetting has been <br />the industrys standard
+        dummy text ever since</P>
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
-          <!-- <div class="col-lg-6 d-flex flex-column justify-content-center order-2 order-lg-1" data-aos="fade-up"
-            data-aos-delay="100">
-            <h3>Enim quis est voluptatibus aliquid consequatur</h3>
-            <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus
-              laudantium. Soluta voluptate sed facere corporis dolores excepturi</p>
-
-            <div class="row">
-
-              <div class="col-lg-6 icon-box d-flex">
-                <i class="bi bi-easel flex-shrink-0"></i>
-                <div>
-                  <h4>Lorem Ipsum</h4>
-                  <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias </p>
-                </div>
-              </div> End Icon Box -->
-          <!-- 
-              <div class="col-lg-6 icon-box d-flex">
-                <i class="bi bi-patch-check flex-shrink-0"></i>
-                <div>
-                  <h4>Nemo Enim</h4>
-                  <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiise</p>
-                </div>
-              </div> -->
-          <!-- End Icon Box -->
-
-          <!-- <div class="col-lg-6 icon-box d-flex">
-                <i class="bi bi-brightness-high flex-shrink-0"></i>
-                <div>
-                  <h4>Dine Pad</h4>
-                  <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit</p>
-                </div>
-              </div> -->
-          <!-- End Icon Box -->
-
-          <!-- <div class="col-lg-6 icon-box d-flex">
-                <i class="bi bi-brightness-high flex-shrink-0"></i>
-                <div>
-                  <h4>Tride clov</h4>
-                  <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit</p>
-                </div>
-              </div> -->
-          <!-- End Icon Box -->
-
-          <!-- </div>
-
-          </div>  -->
-
-          <!-- <div class="features-image col-lg-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/features-3.jpg" alt="">
-          </div> -->
-
         </div>
-
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
       </div>
+      <!-- <div class="col-lg-6 d-flex flex-column justify-content-center order-2 order-lg-1" data-aos="fade-up"
+        data-aos-delay="100">
+        <h3>Enim quis est voluptatibus aliquid consequatur</h3>
+        <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus
+          laudantium. Soluta voluptate sed facere corporis dolores excepturi</p>
 
-    </section><!-- /More Features Section -->
+        <div class="row">
+
+          <div class="col-lg-6 icon-box d-flex">
+            <i class="bi bi-easel flex-shrink-0"></i>
+            <div>
+              <h4>Lorem Ipsum</h4>
+              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias </p>
+            </div>
+          </div> End Icon Box -->
+      <!-- 
+          <div class="col-lg-6 icon-box d-flex">
+            <i class="bi bi-patch-check flex-shrink-0"></i>
+            <div>
+              <h4>Nemo Enim</h4>
+              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiise</p>
+            </div>
+          </div> -->
+      <!-- End Icon Box -->
+
+      <!-- <div class="col-lg-6 icon-box d-flex">
+            <i class="bi bi-brightness-high flex-shrink-0"></i>
+            <div>
+              <h4>Dine Pad</h4>
+              <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit</p>
+            </div>
+          </div> -->
+      <!-- End Icon Box -->
+
+      <!-- <div class="col-lg-6 icon-box d-flex">
+            <i class="bi bi-brightness-high flex-shrink-0"></i>
+            <div>
+              <h4>Tride clov</h4>
+              <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit</p>
+            </div>
+          </div> -->
+      <!-- End Icon Box -->
+
+      <!-- </div>
+
+      </div>  -->
+
+      <!-- <div class="features-image col-lg-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
+        <img src="assets/img/features-3.jpg" alt="">
+      </div> -->
+
+    </div>
+
 
     <!-- Pricing Section -->
     <section id="pricing" class="pricing section">
