--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
       <div class="container">
         <div class="row justify-content-between">
           <h2> Your All In one Accounting<br /> Solution with My T</h2>
-          p>Lorem Ipsum is simply dummy text of the printing and typesetting has been<br /> the industrys standard dummy
+          Lorem Ipsum is simply dummy text of the printing and typesetting has been<br /> the industrys standard dummy
           text
           ever since</p>
 
@@ -391,38 +391,33 @@
             <ul class="nav nav-tabs" data-aos="fade-up" data-aos-delay="100">
               <li class="nav-item">
                 <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#features-tab-1">
-                  <i class="bi bi-binoculars"></i>
+                  <!-- <i class="bi bi-binoculars"></i> -->
                   <div>
-                    <h4 class="d-none d-lg-block">Modi sit est dela pireda nest</h4>
+                    <h4 class="d-none d-lg-block">Lorem Ipsum is simply dummy </h4>
                     <p>
-                      Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                      voluptate
-                      velit esse cillum dolore eu fugiat nulla pariatur
+                      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                     </p>
                   </div>
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-2">
-                  <i class="bi bi-box-seam"></i>
+                  <!-- <i class="bi bi-box-seam"></i> -->
                   <div>
-                    <h4 class="d-none d-lg-block">Unde praesenti mara setra le</h4>
+                    <h4 class="d-none d-lg-block">Lorem Ipsum is simply dummy</h4>
                     <p>
-                      Recusandae atque nihil. Delectus vitae non similique magnam molestiae sapiente similique
-                      tenetur aut voluptates sed voluptas ipsum voluptas
+                      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                     </p>
                   </div>
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-3">
-                  <i class="bi bi-brightness-high"></i>
+                  <!-- <i class="bi bi-brightness-high"></i> -->
                   <div>
-                    <h4 class="d-none d-lg-block">Pariatur explica nitro dela</h4>
+                    <h4 class="d-none d-lg-block">Lorem Ipsum is simply dummy</h4>
                     <p>
-                      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                      est laborum
-                      Debitis nulla est maxime voluptas dolor aut
+                      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                     </p>
                   </div>
                 </a>
@@ -431,9 +426,10 @@
             <div class="col-lg-6">
 
               <div class="tab-content" data-aos="fade-up" data-aos-delay="200">
-
-                <div class="tab-pane fade active show" id="features-tab-1">
-                  <img src="assets/img/tabs-1.jpg" alt="" class="img-fluid">
+                <div>
+                  <div class="tab-pane fade active show" id="features-tab-1">
+                    <img src="assets/img/phone.svg" alt="" class="img-fluid">
+                  </div>
                 </div><!-- End Tab Content Item -->
 
 
@@ -445,38 +441,34 @@
             <ul class="nav nav-tabs" data-aos="fade-up" data-aos-delay="100">
               <li class="nav-item">
                 <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#features-tab-1">
-                  <i class="bi bi-binoculars"></i>
+                  <!-- <i class="bi bi-binoculars"></i> -->
                   <div>
-                    <h4 class="d-none d-lg-block">Modi sit est dela pireda nest</h4>
+                    <h4 class="d-none d-lg-block">Lorem Ipsum is simply dummy </h4>
                     <p>
-                      Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                      voluptate
-                      velit esse cillum dolore eu fugiat nulla pariatur
+                      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                     </p>
                   </div>
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-2">
-                  <i class="bi bi-box-seam"></i>
+                  <!-- <i class="bi bi-box-seam"></i> -->
                   <div>
                     <h4 class="d-none d-lg-block">Unde praesenti mara setra le</h4>
+                    <h4 class="d-none d-lg-block">Lorem Ipsum is simply dummy </h4>
                     <p>
-                      Recusandae atque nihil. Delectus vitae non similique magnam molestiae sapiente similique
-                      tenetur aut voluptates sed voluptas ipsum voluptas
+                      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                     </p>
                   </div>
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-3">
-                  <i class="bi bi-brightness-high"></i>
+                  <!-- <i class="bi bi-brightness-high"></i> -->
                   <div>
-                    <h4 class="d-none d-lg-block">Pariatur explica nitro dela</h4>
+                    <h4 class="d-none d-lg-block">Lorem Ipsum is simply dummy </h4>
                     <p>
-                      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                      est laborum
-                      Debitis nulla est maxime voluptas dolor aut
+                      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                     </p>
                   </div>
                 </a>
@@ -660,7 +652,7 @@
       <P>Lorem Ipsum is simply dummy text of the printing and typesetting has been <br />the industrys standard
         dummy text ever since</P>
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-2">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
@@ -668,7 +660,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-2">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
@@ -676,7 +668,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-2">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
