--- a/index.html
+++ b/index.html
@@ -291,11 +291,75 @@
       </div><!-- End Section Title -->
 
       <div class="container">
-        <div class="imaging">
+        <div class="imaging"> 
+          <div class="cards">
+             <div class="card-item">
+              <div class="item-child">
+               <div class="item-child-child">
+                 <div class="boximage"><img src="assets/img/Frame 1000002210.jpg" alt=""></div>
+                 <div class="item-text"> <p>Lorem Ipsum is simply dummy</p> <div class="paragraph">Lorem Ipsum  is simply dummy text of the printing and typesetting industry. Lorem Ipsum has</div>
+                   </div>
+              </div>
+            </div>
+            <div class="image-section">
+              <div class="arrow-circle"><img src="/assets/img/coolicon.png" alt=""></div>
+              <div class="section-img"><img src="/assets/img/image 29.png" alt=""></div>
+            </div> 
+          </div>
+          </div>
+          <div class="cards">
+             <div class="card-item">
+              <div class="item-child">
+               <div class="item-child-child">
+                 <div class="boximage"><img src="assets/img/Frame 1000002210.jpg" alt=""></div>
+                 <div class="item-text"> <p>Lorem Ipsum is simply dummy</p> <div class="paragraph">Lorem Ipsum  is simply dummy text of the printing and typesetting industry. Lorem Ipsum has</div>
+                   </div>
+              </div>
+            </div>
+            <div class="image-section">
+              <div class="arrow-circle"><img src="/assets/img/coolicon.png" alt=""></div>
+              <div class="section-img"><img src="/assets/img/image 29.png" alt=""></div>
+            </div> 
+          </div>
+          </div>
+          <div class="cards">
+             <div class="card-item">
+              <div class="item-child">
+               <div class="item-child-child">
+                 <div class="boximage"><img src="assets/img/Frame 1000002210.jpg" alt=""></div>
+                 <div class="item-text"> <p>Lorem Ipsum is simply dummy</p> <div class="paragraph">Lorem Ipsum  is simply dummy text of the printing and typesetting industry. Lorem Ipsum has</div>
+                   </div>
+              </div>
+            </div>
+            <div class="image-section">
+              <div class="arrow-circle"> <img src="/assets/img/coolicon.png" alt=""></div>
+              <div class="section-img"><img src="/assets/img/image 29.png" alt=""></div>
+            </div> 
+          </div>
+          </div>
+          <div class="cards">
+             <div class="card-item">
+              <div class="item-child">
+               <div class="item-child-child">
+                 <div class="boximage"><img src="assets/img/Frame 1000002210.jpg" alt=""></div>
+                 <div class="item-text"> <p>Lorem Ipsum is simply dummy</p> <div class="paragraph">Lorem Ipsum  is simply dummy text of the printing and typesetting industry. Lorem Ipsum has</div>
+                   </div>
+              </div>
+            </div>
+            <div class="image-section">
+              <div class="arrow-circle"><img src="/assets/img/coolicon.png" alt=""></div>
+              <div class="section-img"><img src="/assets/img/image 29.png" alt=""></div>
+            </div> 
+          </div>
+          </div>
+          <!-- <div class="cards"></div>
+          <div class="cards"></div>
+          <div class="cards"></div> -->
+          <!-- <img src="assets/img/features-1.jpg" alt="" />
           <img src="assets/img/features-1.jpg" alt="" />
           <img src="assets/img/features-1.jpg" alt="" />
-          <img src="assets/img/features-1.jpg" alt="" />
-          <img src="assets/img/features-1.jpg" alt="" />
+          <img src="assets/img/features-1.jpg" alt="" /> -->
+
         </div>
       </div>
 
