--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       <!-- More Features Section -->
       <section id="more-features" class="more-features section">
 
-        <div class="container">
+        <div class="container black-section">
           <div class="row">
             <div class="col">
               <div class="card custom-card">
