--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
               <div class="card"  style="border-radius: 20px;">
   
                 <div class="" style="max-height: 276px;">
-                  <img src="assets/img/testimonials/testi2.png" alt="" class="card-img-top">
+                  <img src="assets/img/testimonials/testi2.png" alt="" class="card-img-top" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
                 </div>
                 <div class="card-body" style="background-color: white; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;" >
                   <h6 class="card-title">Mar 01, 2024</h6>
@@ -1012,7 +1012,7 @@
             <div class="col-lg-4 mb-4">
               <div class="card"  style="border-radius: 20px;">
                 <div class="" style="max-height: 276px;">
-                  <img src="assets/img/testimonials/testi3.png" alt="" class="card-img-top">
+                  <img src="assets/img/testimonials/testi3.png" alt="" class="card-img-top" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
                 </div>
                 <div class="card-body" style="background-color: white; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
                   <h6 class="card-title">Mar 01, 2024</h6>
@@ -1171,7 +1171,7 @@
 
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Compnay</h4>
+          <h4>Contact</h4>
           <ul>
             <li><a href="#">Email</a></li>
             <li><a href="#">Instagram</a></li>
@@ -1184,11 +1184,15 @@
       </div>
     </div>
 
-    <div class="container copyright text-left mt-4">
+    <div class=" copyright text-left mt-4">
+      <div class="container">
+
+ 
       <p>© <span>2024</span> <strong class="px-1 sitename">Xtrak. </strong><span>All Rights Reserved</span></p>
       <div class="credits">
         Designed by <a class="text-white" href="#">Xtrak</a>
       </div>
+    </div>
     </div>
 
   </footer>
