--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a href="index.html" class="logo d-flex align-items-center mx-auto">
+      <a href="index.html" class="logo d-flex align-items-center mx-auto mylogo">
         <img src="assets/img/MyTlogo.svg" alt="">
         <h1 class="sitename"></h1>
       </a>
 
       <a href="#" class="loginbutton">Log In </a>
-      <a class="btn-getstarted " href="index.html#about">Get Started</a>
+      <a class="btn-getstarted " style="font-weight: 600;" href="index.html#about">Get Started</a>
 
     </div>
   </header>
@@ -380,11 +380,18 @@
         style="margin-top: 100px; background-color: #111111; padding-bottom: 50px;">
 
         <div class="container black-section">
-          <div class="row">
+          <div class="black-textarea">
+          <div class="firstline">Why my T</div>
+          <div class="secondline">One and only for you <img src="/assets/img/64b11864635cb0e2d0e23473_new-svg-13 1.png" alt=""></div>
+          <div class="linethree">Lorem Ipsum is simply dummy text of the printing and typesetting has been 
+            the industrys standard dummy text ever since</div>
+
+          </div>
+          <div class="row black-row">
             <div class="col">
               <div class="card custom-card">
                 <div class="card-body">
-                  <h5 class="card-title">One and only for you</h5>
+                  <h5 class="card-title">One and only for you </h5>
                   <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting has been
                     the industrys standard dummy text ever since</p>
                   <img src="./assets/img/feature/64ddbc5989aeb93f160948ac_bti-img 1.svg" alt="" />
@@ -429,6 +436,7 @@
                 </div>
               </div>
             </div>
+            <a href="#" class="getstarted  blacksec-btn"><button>GET STARTED</button></a>
           </div>
 
 
@@ -441,13 +449,13 @@
       <div class="container" style="margin-top: 50px;">
         <div class="row justify-content-center d-flex">
 
-          <h2 class="text-center"> Your All In one Accounting<br /> Solution with My T</h2>
-          <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting has been<br /> the
+          <h2 class="text-center " style="font-weight: 600; margin-top: 40px;"> Your All In one Accounting<br /> Solution with My T</h2>
+          <p class="text-center" style="padding-bottom: 20px;">Lorem Ipsum is simply dummy text of the printing and typesetting has been<br /> the
             industrys standard
             dummy
             text ever since</p>
         </div>
-        <div class="col-lg-10 d-flex align-items-center">
+        <div class="col-lg-10 d-flex align-items-center mobile-section">
           <ul class="nav nav-tabs" data-aos="fade-up" data-aos-delay="100">
             <li class="nav-item">
               <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#features-tab-1">
@@ -483,7 +491,7 @@
               </a>
             </li>
           </ul>
-          <ul class="col-lg-6" style="margin-right: 20px;">
+          <ul class="col-lg-6" style="width: 42%; height: 506px;">
             <li>
 
               <div class="tab-content" data-aos="fade-up" data-aos-delay="200">
@@ -705,11 +713,11 @@
     </section>
 
 
-    <div class="row justify-content-center gy-4 d-flex" style="margin-top: 100px; margin-bottom: 100px;">
-      <div class="d-flex justify-content-center">
-        <h1>Bookkeeping loved by companies around the globe</h1>
+    <div class="row justify-content-center gy-4 d-flex" style="margin-top: 80px; margin-bottom: 100px;">
+      <div class="d-flex justify-content-center google-section">
+    Bookkeeping loved by companies around the globe
       </div>
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center mt-0">
 
 
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting has been <br />the industrys standard
