--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
           </div> -->
     <!-- End Service Item -->
 
-    
+
 
 
     </section>
@@ -816,13 +816,15 @@
               <h2><strong>Business Elite</strong></h2>
               <p class="description">Essential features to boost efficiency and<br /> streamline operations</p>
               <h4>£ 5.00 Euro</h4>
-              <ul>
-                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
-                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
-                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
-                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+              <div class="pricing-list">
+                <ul>
+                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
 
-              </ul>
+                </ul>
+              </div>
               <a href="#" class="cta-btn">GET STARTED</a>
             </div>
           </div><!-- End Pricing Item -->
@@ -833,13 +835,15 @@
               <h2><strong>Business</strong></h2>
               <p class="description-two">Essential features to boost efficiency and<br /> streamline operations</p>
               <h4>£ 5.00 Euro</h4>
-              <ul>
-                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
-                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
-                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
-                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+              <div class="pricing-list">
+                <ul>
+                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
 
-              </ul>
+                </ul>
+              </div>
               <a href="#" class="cta-btn-two">GET STARTED</a>
             </div>
           </div><!-- End Pricing Item -->
@@ -849,13 +853,15 @@
               <h2><strong>Core</strong></h2>
               <p class="description">Essential features to boost efficiency and<br /> streamline operations</p>
               <h4>£ 5.00 Euro</h4>
-              <ul>
-                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
-                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
-                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
-                <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+              <div class="pricing-list">
+                <ul>
+                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
 
-              </ul>
+                </ul>
+              </div>
               <a href="#" class="cta-btn">GET STARTED</a>
             </div>
           </div><!-- End Pricing Item -->
