--- a/index.html
+++ b/index.html
@@ -721,14 +721,14 @@
         Bookkeeping loved by companies around the globe
       </div>
       <div class="d-flex justify-content-center mt-0">
-
-
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting has been <br />the industrys standard
+        <p style="text-align: center;">Lorem Ipsum is simply dummy text of the printing and typesetting has been
+          <br />the industrys standard
           dummy text ever since
         </p>
       </div>
 
-      <section>
+      <section class="d-flex">
+        <div class="review-container d-flex">
         <div class="review-box">
           <div class="review-content">
             <div class="user-info">
@@ -779,20 +779,18 @@
           </div>
           <div class="review-text">
             <div class="star-rating">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
               <img src="./assets/img/testimonials/Vector.png" alt="" />
               <img src="./assets/img/testimonials/Vector.png" alt="" />
               <img src="./assets/img/testimonials/Vector.png" alt="" />
               <img src="./assets/img/testimonials/Vector.png" alt="" />
               <img src="./assets/img/testimonials/Vector.png" alt="" />
             </div>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's standard dummy text ever since the 1500s.
-            </p>
+            <div>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s.
+              </p>
+            </div>
           </div>
         </div>
         <div class="review-box">
@@ -828,7 +826,7 @@
             </p>
           </div>
         </div>
-
+      </div>
 
       </section>
 
