--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
                 </div>
               </div>
               <div class="image-section">
-                <div class="arrow-circle"><img src="/assets/img/coolicon.png" alt=""></div>
-                <div class="section-img"><img src="/assets/img/image 29.png" alt=""></div>
+                <div class="arrow-circle"><img src="assets/img/coolicon.png" alt=""></div>
+                <div class="section-img"><img src="assets/img/image 29.png" alt=""></div>
               </div>
             </div>
           </div>
@@ -323,8 +323,8 @@
                 </div>
               </div>
               <div class="image-section">
-                <div class="arrow-circle"><img src="/assets/img/coolicon.png" alt=""></div>
-                <div class="section-img"><img src="/assets/img/image 29.png" alt=""></div>
+                <div class="arrow-circle"><img src="assets/img/coolicon.png" alt=""></div>
+                <div class="section-img"><img src="assets/img/image 29.png" alt=""></div>
               </div>
             </div>
           </div>
@@ -341,8 +341,8 @@
                 </div>
               </div>
               <div class="image-section">
-                <div class="arrow-circle"> <img src="/assets/img/coolicon.png" alt=""></div>
-                <div class="section-img"><img src="/assets/img/image 29.png" alt=""></div>
+                <div class="arrow-circle"> <img src="assets/img/coolicon.png" alt=""></div>
+                <div class="section-img"><img src="assets/img/image 29.png" alt=""></div>
               </div>
             </div>
           </div>
@@ -359,8 +359,8 @@
                 </div>
               </div>
               <div class="image-section">
-                <div class="arrow-circle"><img src="/assets/img/coolicon.png" alt=""></div>
-                <div class="section-img"><img src="/assets/img/image 29.png" alt=""></div>
+                <div class="arrow-circle"><img src="assets/img/coolicon.png" alt=""></div>
+                <div class="section-img"><img src="assets/img/image 29.png" alt=""></div>
               </div>
             </div>
           </div>
@@ -381,10 +381,11 @@
 
         <div class="container black-section">
           <div class="black-textarea">
-          <div class="firstline">Why my T</div>
-          <div class="secondline">One and only for you <img src="/assets/img/64b11864635cb0e2d0e23473_new-svg-13 1.png" alt=""></div>
-          <div class="linethree">Lorem Ipsum is simply dummy text of the printing and typesetting has been 
-            the industrys standard dummy text ever since</div>
+            <div class="firstline">Why my T</div>
+            <div class="secondline">One and only for you <img
+                src="./assets/img/64b11864635cb0e2d0e23473_new-svg-13 1.png" alt=""></div>
+            <div class="linethree">Lorem Ipsum is simply dummy text of the printing and typesetting has been
+              the industrys standard dummy text ever since</div>
 
           </div>
           <div class="row black-row">
@@ -449,8 +450,10 @@
       <div class="container" style="margin-top: 50px;">
         <div class="row justify-content-center d-flex">
 
-          <h2 class="text-center " style="font-weight: 600; margin-top: 40px;"> Your All In one Accounting<br /> Solution with My T</h2>
-          <p class="text-center" style="padding-bottom: 20px;">Lorem Ipsum is simply dummy text of the printing and typesetting has been<br /> the
+          <h2 class="text-center " style="font-weight: 600; margin-top: 40px;"> Your All In one Accounting<br />
+            Solution with My T</h2>
+          <p class="text-center" style="padding-bottom: 20px;">Lorem Ipsum is simply dummy text of the printing and
+            typesetting has been<br /> the
             industrys standard
             dummy
             text ever since</p>
@@ -715,7 +718,7 @@
 
     <div class="row justify-content-center gy-4 d-flex" style="margin-top: 80px; margin-bottom: 100px;">
       <div class="d-flex justify-content-center google-section">
-    Bookkeeping loved by companies around the globe
+        Bookkeeping loved by companies around the globe
       </div>
       <div class="d-flex justify-content-center mt-0">
 
